<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="resume">Resume</string>
    <string name="go_to_coroutine_page">Go To Coroutine Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_from_file">Read From File</string>
    <string name="go_to_file_page">Go To File Page</string>
    <string name="readFromFileTxt">Read From File</string>
    <string name="write_to_file">Write To File</string>
    <string name="external_storage">External Storage</string>
    <string name="textview">TextView</string>
    <string name="description">Description</string>
    <string name="go_to_network_page">Go To Network Page</string>
    <string name="add">Add</string>
    <string name="add_name">Add Name</string>
    <string name="go_to_exoplayer_page">Go To ExoPlayer Page</string>
    <string name="go_to_alarm_page">Go To Alarm Page</string>
    <string name="go_to_network_connectivity">Go To Network Connectivity</string>
    <string name="go_to_service_page">Go To Service Page</string>
    <string name="to_surface_view">Go To Surface View Page</string>
    <string name="sqlite">SQLite</string>
    <string name="go_to_sqlite_page">Go To Sqlite Page</string>
    <string name="go_to_intent_page">Go To Intent Page</string>
    <string name="name">Name:-</string>
    <string name="city">City:-</string>
    <string name="save_patient_data">Save Patient Data</string>
    <string name="get_all_patients_information">Get All Patients Information</string>
    <string name="title_activity_intent">IntentActivity</string>
    <string name="image">Image</string>
    <string name="go_to_threads_page">Go To Threads Page</string>
    <string name="go_to_custom_views">Go To Custom Views Page</string>
    <string name="go_to_viewpager2_page">Go To ViewPager2 Page</string>
    <string name="go_to_tiktok_page">Go To TikTok Page</string>
    <string name="go_to_theme_page">Go To Theme Page</string>
    <string name="go_to_gallery_page">Go To Gallery Page</string>
    <string name="go_to_socket_page">Go To Socket Page</string>
    <string name="go_to_deep_link_page">Go To Deep Link Page</string>
    <string name="go_to_animations_page">Go To Animations Page</string>
</resources>