<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".sqlite.SqliteFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sqlite"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="true"
        android:background="@drawable/border_rounded_background"
        android:hint="@string/name"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/cityEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="true"
        android:background="@drawable/border_rounded_background"
        android:hint="@string/city"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/savePatientBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/save_patient_data" />

    <Button
        android:id="@+id/getAllPatientInformationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/get_all_patients_information" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allPatientInformationRecyclerView"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/patient_item_layout"
        />
</LinearLayout>